--- a/paper/dotaligner.bib
+++ b/paper/dotaligner.bib
@@ -1,20 +1,33 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Martin Smith at 2017-05-08 14:40:46 +1000 
+%% Created for Martin Smith at 2017-05-10 17:17:53 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{nawrocki2013infernal,
+	Author = {Nawrocki, Eric P and Eddy, Sean R},
+	Date-Added = {2017-05-08 11:01:09 +0000},
+	Date-Modified = {2017-05-08 11:01:09 +0000},
+	Journal = {Bioinformatics},
+	Number = {22},
+	Pages = {2933--2935},
+	Publisher = {Oxford Univ Press},
+	Title = {Infernal 1.1: 100-fold faster RNA homology searches},
+	Volume = {29},
+	Year = {2013}}
+
 @inproceedings{ankerst99ordering,
 	Author = {Ankerst, M and Breunig, M and Kriegel, HP and others},
 	Booktitle = {Proc. ACM SIGMOD},
 	Date-Added = {2017-05-08 04:40:44 +0000},
-	Date-Modified = {2017-05-08 04:40:44 +0000},
+	Date-Modified = {2017-05-10 07:17:52 +0000},
 	Title = {Ordering points to identify the clustering structure},
-	Volume = {99}}
+	Volume = {99},
+	Year = {1999}}
 
 @inproceedings{ester1996density,
 	Author = {Ester, Martin and Kriegel, Hans-Peter and Sander, J{\"o}rg and Xu, Xiaowei and others},
