--- a/paper/DA.tex
+++ b/paper/DA.tex
@@ -202,7 +202,7 @@
   \cny{Australia}                                    % country
 }
 \address[id=aff2]{%
-  \orgname{St Vincent’s Clinical School, UNSW Australia},
+  \orgname{St Vincent's Clinical School, UNSW Australia},
   \street{Victoria Street},
   \postcode{NSW 2010}
   \city{Sydney},
@@ -247,7 +247,7 @@
 
 \begin{abstract} % abstract
 %\parttitle{First part title} %if any
-The abundance  and diversity of processed transcripts in eukaryotic genomes poses a challenge 
+The abundance  and diversity of processed transcripts in eukaryotic genomes possesses a challenge 
 for the systemic classification of their biological functions. Sparse sequence conservation in 
 non-coding sequences and the unreliable nature of RNA structure prediction algorithms further 
 exacerbate this conundrum. Here, we present a unified computational approach for the 
@@ -316,33 +316,39 @@ immuno-precipitation data for 44 proteins, further expanding the lexicon of func
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Background}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 The human genome is pervasively transcribed into RNA with less than 2\%
-encoding protein sequences. As genomic technologies progress, an ever 
-increasing amount of non-protein coding RNAs (ncRNA) are being discovered.
-Once class of ncRNAs -- long noncoding RNAs (lncRNAs )-- are of particular 
-interest for functional genome annotation given the large expanses they encompass. 
-Understanding the molecular mechanisms underlying the biological functions of 
-lncRNAs -- and how they are disrupted in disease -- is required to improve 
-the functional annotation of the human genome. \\
+encoding protein sequences. As genomic technologies progress, an ever
+increasing amount of non-protein coding RNAs (ncRNA) are being discovered. Many
+ncRNAs lack sequence conservation or sequence motifs, in contrast to the open
+reading frame of protein-coding RNA. Instead, the higher-order structure of RNA
+molecules is an essential feature of ncRNAs that can be used for their
+classification and the inference of their biological function. \\
 
-So far, only a relatively small quantity of lncRNAs have been functionally characterised, 
-with regulation of gene expression and epigenetic states recurring as common 
-biological functions \cite{morris2014rise,engreitz2016long}. 
-The higher-order structure of RNA molecules is an essential feature of non-coding 
-RNAs that can be used for their classification and the inference of their biological function. 
-We, and others, hypothesise that lncRNAs act as scaffolds for the recruitment of 
-proteins and assembly of ribonucleoproteins (RNPs), mediated by the presence 
-of modular RNA structures, akin to the domain organisation of proteins 
-\cite{zappulla2006rna,hogg2008structured,rinn2012genome,mercer2013structure,smith2013widespread,chujo2016architectural,blythe2016ins}. 
-Protein-interacting regions of lncRNAs are likely to contain a combination 
-of sequence and structure motifs that confer binding specificity.\\
+Long noncoding RNAs (lncRNAs) are of particular interest for functional genome
+annotation given the large expanses they encompass.  Understanding the
+molecular mechanisms underlying the biological functions of lncRNAs -- and how
+they are disrupted in disease -- is required to improve the functional
+annotation of the human genome. So far, only a relatively small quantity of
+lncRNAs have been functionally characterised, with regulation of gene
+expression and epigenetic states recurring as common biological functions
+\cite{morris2014rise,engreitz2016long}.  We, and others, hypothesise that
+lncRNAs act as scaffolds for the recruitment of proteins and assembly of
+ribonucleoproteins (RNPs), mediated by the presence of modular RNA structures,
+akin to the domain organisation of proteins
+\cite{zappulla2006rna,hogg2008structured,rinn2012genome,mercer2013structure,smith2013widespread,chujo2016architectural,blythe2016ins}.
+Protein-interacting regions of lncRNAs are likely to contain a combination of
+sequence and structure motifs that confer binding specificity.\\
 
-Most small ncRNAs have well characterised secondary and tertiary structures, 
-as evidenced in RFAM, the largest collection of curated RNA families (2,588 families as of version 12.2 \cite{rfam12}). 
-However, determining the structural features of  long ncRNAs (lncRNAs) is a complex problem given their size and, 
-in general,  faster evolutionary turnover.  
- These challenges have raised doubts concerning the prevalence of functional structural  motifs in lncRNAs \cite{eddy2014computational,rivas2016statistical}, 
- despite evolutionary and biochemical support of conserved base-pairing interactions \cite{smith2013widespread,spitale2015structural,lu2016rna}.\\
+Most small ncRNAs have well characterised secondary and tertiary structures, as
+evidenced in RFAM, the largest collection of curated RNA families (2,588
+families as of version 12.2 \cite{rfam12}). In contrast, determining the
+structural features of lncRNAs is a complex problem given their size and, in
+general, faster evolutionary turnover. These challenges have raised doubts
+concerning the prevalence of functional structural  motifs in lncRNAs
+\cite{eddy2014computational,rivas2016statistical}, despite evolutionary and
+biochemical support of conserved base-pairing interactions
+\cite{smith2013widespread,spitale2015structural,lu2016rna}.\\
 
 %The higher-order structural features of protein-binding RNAs are 
 %subjected to different evolutionary dynamics than sequence constrained 
@@ -374,15 +380,6 @@ in general,  faster evolutionary turnover.
 %from sequence conservation and freed from one single optimal RNA secondary
 %structure.\\
 
-{\color{red} Perhaps this paragraf should go to the discussion?}
-As the increasing accessibility of next generation sequencing coalesces with precision medicine, 
-in-depth transcriptome profiling will help elucidate the function and clinical impact of disease-associated,
-non-coding single nucleotide variants. 
-Indeed, 80\% of disease-associated single nucleotide polymorphisms occur in non-coding regions 
-\cite{hindorff2009potential,ritchie2014functional}. Thus, elucidating the structural features of RNAs associated to RNA-binding proteins and ribonucleoprotein (RNP) complexes, combined to the systematic classification of their genome-wide occurrence, 
-can identify novel riboSNitches (functional RNA structures that are disrupted in disease) 
-and help pinpoint the molecular function of non-coding mutations. \\
-
 %
 %For clustering of RNA domains a dissimilarity measurement of all pairs of query
 %structures is needed. The dissimilarity is described through a pairwise weighted
@@ -395,20 +392,34 @@ and help pinpoint the molecular function of non-coding mutations. \\
 %MAX-SNP-hard. However, the problem can be attacked by intelligent heuristics
 %that avoid the examination of all possible alignment states.\\
 
-Identifying RNAs with similar functions involves comparing both their primary sequence 
-and higher-order structures simultaneously. If the
-sequence similarity falls below 60\% sequence com-
-parison will not find anymore domain similarities that
-are based on structure (Gardner et al., 2005). Hence, methods are needed that find structural similarity independent from sequence conservation and freed from one single optimal RNA secondary structure. The Sankoff algorithm resolves
-the optimal sequence-structure alignment of 2 RNAs \cite{sankoff85}, 
-but its computational complexity limits its practicality. Alternative strategies often 
-employ pre-calculated secondary structure ensembles for each sequence, e.g. basepair
-probabilities in thermodynamically equilibrated RNA structure ensembles
-\cite{McCaskill:1990}. The latter can substantially speed up the calculation
-of structure-based alignments \cite{Hofacker15073017}, of which there are many variants.
-The programs PMcomp (Hofacker et al., 2004), LocaRNA (Will et al., 2007), and ProbAlign (PMID:16954142) use the pre-computed base-pair probability matrices of both sequences and score the alignment based on the notion of a common secondary structure. The sequence-structure alignment problem is reduced to a two-dimensional problem by RNApaln (PMID:22115189) and StrAL (Dalli et al., 2006) which reduces base-pair probabilities to base specific probabilities (such as unpaired probability). All these methods do not explicitely consider suboptimal structures in the alignment. The pairwise alignment of basepair probability matrices (dot plots) has been first introduced by CARNA (Palù et al., 2010; Sorescu et al., 2012). CARNA finds iterativelly better alignments with an effective constraint programming technique using a branch and bound scheme. An alternative heuristic is pruning of the dynamical programming matrix without pre-folding constraints, which is implemented by FoldAlign (PMID:17937495,PMID:26704597). \\ 
+Identifying RNAs with similar functions involves comparing both their primary
+sequence and higher-order structures simultaneously. If the sequence similarity
+falls below 60\%, sequence comparison will not find anymore domain similarities
+that are based on structure \cite{Gardner15860779}. Hence, methods are needed
+that find structural similarity independent from sequence conservation and
+freed from one single optimal RNA secondary structure. The Sankoff algorithm
+resolves the optimal sequence-structure alignment of two RNAs \cite{sankoff85},
+but its computational complexity limits its practicality. Alternative
+strategies often employ pre-calculated secondary structure ensembles for each
+sequence, e.g. basepair probabilities in thermodynamically equilibrated RNA
+structure ensembles \cite{McCaskill:1990}. The latter can substantially speed
+up the calculation of structure-based alignments \cite{Hofacker15073017}, of
+which there are many variants.  The programs PMcomp \cite{Hofacker15073017},
+LocaRNA \cite{Will17432929}, and ProbAlign \cite{Roshan16954142} use the pre-computed
+base-pair probability matrices of both sequences and score the alignment based
+on the notion of a common secondary structure. The sequence-structure alignment
+problem is reduced to a two-dimensional problem by RNApaln \cite{Lorenz22115189} and
+StrAL \cite{Dalli16613908} which reduce base-pair probabilities to base
+specific probabilities (such as unpaired probability). All these methods do not
+explicitely consider suboptimal structures in the alignment. The pairwise
+alignment of basepair probability matrices (dot plots) has been first
+introduced by CARNA \cite{Palu2010,Sorescu2012}. CARNA finds
+iterativelly better alignments with an effective constraint programming
+technique using a branch and bound scheme. Another heuristic is pruning
+of the dynamical programming matrix without pre-folding constraints, which is
+implemented by FoldAlign \cite{Havgaard17937495,Sundfeld26704597}. \\ 
 
-Will et al. first showed that a (dis)similarity matrix can be constructed from all-vs-all pairwise RNA structure alignments with the pairwise alignment tool \locarna{}, identifying known and novel groups of homologous RNAs using hierarchical clustering \cite{Will17432929}. However, this strategy involves applying a subjective threshold to the resulting dendrogram to extract structurally related sequences. Alternative methods to identify clusters of homologous RNAs include \texttt{NoFold}, which clusters query sequences based on their relative similarity to reference structures \cite{Middleton25234928}, and \graphclust{}, an alignment-free approach that decomposes RNA structures into graph-encoded features \cite{Heyne22689765}. \texttt{RNAscClust}, an extension of \graphclust{}, utilizes the evolutionary signatures of RNA structures as additional classification feature \cite{Miladi28334186}. \\
+Will \textit{et al.} \cite{Will17432929} first showed that a (dis)similarity matrix can be constructed from all-vs-all pairwise RNA structure alignments with the pairwise alignment tool \locarna{}, identifying known and novel groups of homologous RNAs using hierarchical clustering \cite{Will17432929}. However, this strategy involves applying a subjective threshold to the resulting dendrogram to extract structurally related sequences. Alternative methods to identify clusters of homologous RNAs include \texttt{NoFold}, which clusters query sequences based on their relative similarity to reference structures \cite{Middleton25234928}, and \graphclust{}, an alignment-free approach that decomposes RNA structures into graph-encoded features \cite{Heyne22689765}. \texttt{RNAscClust}, an extension of \graphclust{}, utilizes the evolutionary signatures of RNA structures as additional classification feature \cite{Miladi28334186}. \\
 
 %Despite of the usage of the basepair probability
 %matrices these methods extract the maximum-weight common secondary structure but
@@ -573,7 +584,7 @@ compared to XXX random peaks. \\
 Given its relative speed and accuracy, \dotaligner{} can be used to generate larger 
 (dis)similarity matrices for cluster analysis than other pairwise structure 
 alignment algorithms, or at least produce them with reasonable computational 
-power.  
+power. \\ 
 
 In addition to its speed, \dotaligner{}'s strength lies in it's capacity to accurately
 score structurally homoglous RNA sequences. The algorithm appears to 
@@ -584,9 +595,22 @@ structural similarity score of two RNA sequences. Our results show that this
 can nonetheless be sufficient to extract structurally and functionally related
 sequences from a large amount of noisy input; an ideal application 
 for screening high-throughput sequencing data, such as RNA 
-immunoprecipitaion data, for common structural motifs. 
+immunoprecipitaion data, for common structural motifs. \\
 
-{\color{red} weaknesses: boundaries, paramter-choice of algorithms. applications: riboswitches, \ldots}
+As the increasing accessibility of next generation sequencing coalesces with
+precision medicine, in-depth transcriptome profiling will help elucidate the
+function and clinical impact of disease-associated, non-coding single
+nucleotide variants.  Indeed, 80\% of disease-associated single nucleotide
+polymorphisms occur in non-coding regions
+\cite{hindorff2009potential,ritchie2014functional}. Thus, elucidating the
+structural features of RNAs associated to RNA-binding proteins and
+ribonucleoprotein (RNP) complexes, combined to the systematic classification of
+their genome-wide occurrence, can identify novel riboSNitches (functional RNA
+structures that are disrupted in disease) and help pinpoint the molecular
+function of non-coding mutations. Something about riboswitches. \\
+
+{\color{red} weaknesses: boundaries, paramter-choice of algorithms.}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -894,7 +918,7 @@ to build pairwise sequence-structure alignments.
 of stochastic sequence alignments contain the correct structure-based alignment
 with significant probability,  even though the optimal
 sequence alignment deviates significantly from the structural alignment
-\cite{muckstein2002stochastic}. \\
+\cite{Muckstein12385998}. \\
 
 Below, we describe the alignment procedure and weight functions.
 The alignment procedure consists of two steps:
@@ -906,7 +930,7 @@ The alignment procedure consists of two steps:
 
 \subsubsection*{1.1 Pairwise probabilistic string alignments}
 In step 1 the computation of the partition function over all canonical pairwise
-string alignments is adapted from probA \cite{muckstein2002stochastic}. The
+string alignments is adapted from probA \cite{Muckstein12385998}. The
 probability of an alignment $A$ in the ensemble of all alignments $Z(T)$ is
 
 \begin{equation}\label{probA}
@@ -998,7 +1022,7 @@ extensions. Start and end gaps are considered as free.\\
 
 Here, a properly weighted sample of stochastic pairwise string alignments
 in the alignment ensemble is examined across both sequences for sequence-structure similarity.
-The stochastic backtracking is adapted from probA \cite{muckstein2006} for
+The stochastic backtracking is adapted from probA \cite{Muckstein12385998} for
 selecting $s$ suboptimal string alignments $A_s$.  The combined weight
 $W_{\mbox{Step2}}$ is a variant of equation \ref{eq1} to explore the similarity
 of the corresponding dot plot alignments:
